Added generation of UUID for team_id & player_id
